--- a/db/data/.my-healthcheck.cnf
+++ b/db/data/.my-healthcheck.cnf
@@ -2,5 +2,5 @@
 port=3306
 socket=/run/mysqld/mysqld.sock
 user=healthcheck
-password=OV~nc3(g(9ObK)qE7V9^jae?Bisv]Fe-
+password=%3!<</yb7ic|>mXJYLtPX@hZ>mcxB/x5
 
