--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,6 @@
 PORT=3001
-
 DB_HOST=db
 DB_USER=biofirma
-DB_PASSWORD="B1oF!rma2025#"
+DB_PASS="B1oF!rma2025#"
 DB_NAME=biometrico
-
-JWT_SECRET=clave-super-secreta
+JWT_SECRET=secreto_super_seguro_biofirma
